# Bootcamp_Python

./: DB.db  pyproject.toml
bootcamp_python/: Crair_Tabelas.py  DB.db  Exemplo_SQLAlchemy.py  Exemplo_SQLModel.py  Exempo_SQLModel.py  database.py  models.py  schema.py
