[tool.poetry]
name = "bootcamp-python"
version = "0.1.0"
description = ""
authors = ["Rodrigo Almeida <rsa.0408@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
